fix mis-aligned outsets; change "buy me" text

--- a/silversword.css
+++ b/silversword.css
@@ -82,6 +82,7 @@ body {
 }
 .outset {
     display: inline-block;
+    float: left;
     color: #cccccc;
     border-radius: 10px;
     height: 44px;
@@ -103,13 +104,10 @@ body {
     display: inline-block;
 }
 
-#buy_me {
+#add_to_cart {
     margin-left: 8px;
     margin-right: 8px;
     width: 147px;
-    vertical-align: super;
-    position: relative;
-    top: -4px;
 
     font-size: 16px;
     font-weight: bold;
